--- a/styles/style.css
+++ b/styles/style.css
@@ -60,6 +60,12 @@ nav li{
     margin-left: 570px;
     margin-right: 550px;
     margin-bottom: 50px;
+    transition: transform 3s;
+}
+/* hover  */
+.btn-primary:hover{
+    transform: rotate(360deg);
+    background: #81e5c7;
 }
 .banner img{
     display: block;
@@ -67,6 +73,7 @@ nav li{
     margin-right: auto;
     width: 80%;
     margin-bottom: 45px;
+    padding-bottom: 30px;
 }
 
 /* feature-images */
@@ -109,4 +116,247 @@ nav li{
     height: 64px;
     background: #FF900E;
     border-radius: 8px;
+}
+/* love & Enjoy */
+.love-enjoy{
+    display: flex;
+    margin-top: 120px;
+    margin-left: 30px;
+    gap: 50px;
+}
+.love-title{
+    font-weight: 700;
+    font-size: 45px;
+    color: #131313;
+    margin-bottom: 24px;
+    border-left: 6px solid #FF900E;;
+    height: 120px;
+    padding-left: 15px;
+}
+.love-description{
+    font-weight: 400;
+    font-size: 16px;
+    color: #727272;
+}
+.love-title-info{
+    padding-left: 20px;
+    background: #FFFFFF;
+    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.06);
+    border-radius: 8px;
+    height: 171px;
+}
+.architect-image img{
+    width: 608px;
+    height: 882px;
+    border-radius: 8px;
+    margin-right: 30px;
+}
+.love-title-info-header{
+    font-weight: 600;
+    font-size: 20px;
+    color: #131313;
+    padding-top: 20px;
+}
+.love-title-info-description{
+    font-weight: 400;
+    font-size: 16px;
+    color: #727272;
+
+}
+/* 10-years-btn */
+.ten-years-btn-primary{
+
+}
+.ten-years-btn{
+    color: #FFFFFF;
+    font-weight: 600;
+    font-size: 50px;
+    padding: 10px 20px;
+    width: 280px;
+    height: 200px;
+    background: #FF900E;
+    border-radius: 8px;
+    position: absolute;
+    left: 650px;
+    top: 2875px;
+}
+.ten-years-btn:hover{
+    background: #81e5c7;
+}
+.ten-years-btn h6{
+    margin: 0px;
+}
+
+/* some facts */
+.some-facts-title{
+    font-weight: 700;
+    font-size: 45px;
+    margin-left: 30px;
+    margin-bottom: 0px;
+}
+.some-facts-paragraph{
+    width: 580px;
+    height: 52px;
+}
+.some-facts-description{
+    margin-left: 30px;
+    margin-top: 30px;
+    color: #727272;
+}
+.some-facts-banners{
+    display: flex;
+    justify-content: center;
+    gap: 100px;
+    margin-top: 100px;
+}
+.some-facts-banner{
+    text-align: center;
+    border: 1px solid #FF900E;
+    border-radius: 8px;
+    padding: 25px;
+    transition: transform 3s;
+}
+
+/* Hover  */
+.some-facts-banner:hover{
+    border: 1px solid #2f04de;
+    transform: rotate(360deg);
+}
+.some-facts-banner img{
+    margin-bottom: 10px;
+}
+.some-facts-banner-header{
+    color: #424242;
+    font-weight: 600;
+    font-size: 45px;
+    margin-bottom: 0px;
+    margin-top: 0px;
+}
+.some-facts-banner-description{
+    font-weight: 600;
+    font-size: 20px;
+    color: #727272;
+    margin-top: 5px;
+}
+
+/* Our Sponsors */
+.sponsors-info{
+    margin-top: 120px;
+    text-align: center;
+}
+.sponsors-title{
+    font-weight: 700;
+    font-size: 45px;
+    color: #131313;
+    margin-bottom: 0px;
+}
+.sponsors-description{
+    font-weight: 400;
+    font-size: 16px;
+    color: #727272;
+    margin-top: 20px;
+}
+.sponsors{
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+    margin-top: 70px;
+}
+.sponsor img{
+    filter: brightness(30%);
+}
+/* hover  */
+.sponsor img:hover{
+    filter: brightness(100%);
+}
+/* Copyright */
+.copyright-info{
+    text-align: center;
+    align-items: center;
+    height: 80px;
+    background-color: #FFF4E7;
+    margin-top: 60px;
+    padding-top: 60px;
+    margin-left: 140px;
+    margin-right: 140px;
+}
+/* Media Quaries */
+/* mobile devices */
+@media only screen and (max-width:688px) {
+    body, html{
+        width: 100vw;
+        overflow-x: hidden;
+        padding: 0.8em 0;
+    }
+    nav{
+        margin-top: 0px;
+        flex-direction: column;
+        margin-bottom: 20px;
+    }
+    .nav-title{
+        align-items: center;
+        text-align: center;
+    }
+    nav ul{
+        padding-left: 0px;
+        text-align: center;
+        align-items: center;
+    }
+    .banner-title{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    .banner-description{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    .btn-primary{
+        margin-left: 120px;
+    }
+    .feature-images{
+        flex-direction: column;
+        margin-top: 0px;
+
+    }
+    .images{
+        grid-template-columns: repeat(1, 1fr);
+        flex-direction: column;
+        margin-left: 15px;
+    }  
+    .quick-list{
+        margin-top: 0px;
+    }
+    .love-enjoy{
+        flex-direction: column;
+        margin-top: 0px;
+        margin-left: 0px;
+    }
+    .architect-image img{
+        height: 540px;
+        width: 380px;
+    }
+    .ten-years-btn{
+        position: static;
+        left: 0px;
+        top: 0px;
+    }
+    .some-facts-title, .some-facts-description{
+        margin-left: 0px;
+        margin-top: 10px;
+    }
+    .some-facts-banners{
+        flex-direction: column;
+        gap: 0px;
+        margin-top: 10px;
+    }
+    .sponsors-info{
+        margin-top: 10px;
+    }
+    .sponsors{
+        flex-direction: column;
+    }
+    .copyright-info{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
 }
