--- a/styles/style.css
+++ b/styles/style.css
@@ -286,7 +286,11 @@ nav li{
     body, html{
         width: 100vw;
         overflow-x: hidden;
-        padding: 0.8em 0;
+        padding: 0em 0;
+    }
+    .header{
+        margin: 0px;
+        
     }
     nav{
         margin-top: 0px;
@@ -311,12 +315,16 @@ nav li{
         margin-right: 0px;
     }
     .btn-primary{
-        margin-left: 120px;
+        margin: 0 auto;
+        display: block;
     }
     .feature-images{
         flex-direction: column;
         margin-top: 0px;
 
+    }
+    .banner img{
+        margin-top: 10px;
     }
     .images{
         grid-template-columns: repeat(1, 1fr);
@@ -339,6 +347,12 @@ nav li{
         position: static;
         left: 0px;
         top: 0px;
+        margin: 0 auto;
+        display: block;
+        height: 120px;
+        width: 150px;
+        font-weight: 500;
+        font-size: 30px;
     }
     .some-facts-title, .some-facts-description{
         margin-left: 0px;
