--- a/styles/style.css
+++ b/styles/style.css
@@ -269,6 +269,31 @@ nav li{
 .sponsor img:hover{
     filter: brightness(100%);
 }
+/* Great Architects */
+.great-architects-title{
+    font-weight: 700;
+    font-size: 45px;
+    color: #131313;
+    margin-bottom: 50px;
+    margin-top: 40px;
+    text-align: center;
+}
+.architects{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-column-gap: 10px;
+    justify-content: center;
+}
+.architect-banner img{
+    height: 350px;
+    width: 350px;
+    margin-left: 35px;
+    margin-right: 30px;
+}
+.architect-title{
+    text-align: center;
+}
+
 /* Copyright */
 .copyright-info{
     text-align: center;
@@ -362,6 +387,14 @@ nav li{
         gap: 0px;
         margin-top: 10px;
     }
+    .architects{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-column-gap: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
+    }
     .sponsors-info{
         margin-top: 10px;
     }
@@ -434,6 +467,14 @@ nav li{
         flex-direction: column;
         gap: 0px;
         margin-top: 10px;
+    }
+    .architects{
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-column-gap: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 50%;
     }
     .sponsors-info{
         margin-top: 10px;
